# gates

./: Cargo.toml  README.ja.md  README.md  deny.toml
.analysis/: architecture.md  architecture.yaml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  release.yml
src/: circular.rs  color.rs  config.rs  input.rs  main.rs  phase.rs  project.rs  reporter.rs  resolve.rs  sanitize.rs  test_utils.rs  tools.rs  traverse.rs
