[package]
name = "gates"
version = "0.6.0"
edition = "2024"
description = "Claude Code completion hook for parallel gate execution"
license = "MIT"

[[bin]]
name = "gates"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
