[package]
name = "gates"
version = "0.10.1"
edition = "2024"
description = "Claude Code completion hook for parallel gate execution"
license = "MIT"

[[bin]]
name = "gates"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
litmus = { git = "https://github.com/thkt/litmus.git" }
oxc_allocator = "0.121"
oxc_ast = "0.121"
oxc_parser = "0.121"
oxc_span = "0.121"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
