[package]
name = "gates"
version = "0.10.1"
edition = "2024"
description = "Claude Code completion hook for parallel gate execution"
license = "MIT"

[[bin]]
name = "gates"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = ">=1"
regex = ">=1"
litmus = { git = "https://github.com/thkt/litmus.git" }
oxc_allocator = ">=0.121"
oxc_ast = ">=0.121"
oxc_parser = ">=0.121"
oxc_span = ">=0.121"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
# フルパス使用検出
absolute_paths = "deny"
# Rustイディオム (RUST.md idioms table)
cast_possible_truncation = "deny"
redundant_closure_for_method_calls = "deny"
filter_map_next = "deny"
flat_map_option = "deny"
manual_filter_map = "deny"
manual_find_map = "deny"
# インポート
wildcard_imports = "deny"
enum_glob_use = "deny"
# 文字列
str_to_string = "deny"
# 引数
needless_pass_by_value = "deny"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
